# program-dimalinux-2

./: .gitignore  PROJECT_DESCRIPTION.md
anchor_project/: .prettierignore  Anchor.toml  Cargo.toml  LINTING.md  RafoG5keM8QcdGPvzPxDwxmqWz39G4MsDQTbT64e1na.json  eslint.config.mjs  package.json  tsconfig.json
anchor_project/migrations/: deploy.ts
anchor_project/programs/raffle/: Cargo.toml
anchor_project/programs/raffle/src/: errors.rs  lib.rs  state.rs
anchor_project/programs/raffle/src/instructions/: buy_tickets.rs  claim_prize.rs  close_raffle.rs  create_raffle.rs  draw_winner.rs  draw_winner_callback.rs  mod.rs  shuffle_tickets.rs
anchor_project/tests/: raffle.ts
anchor_project/tests/utils/: raffle_helper.ts  randomness.ts  test_utils.ts
frontend/: .prettierignore  .prettierrc.json  LINTING.md  README.md  SYNC_CHANGES.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/idl/: raffle.json
frontend/src/idl/types/: raffle.ts
frontend/src/lib/: CreateRaffle.svelte  Raffle.ts  Transfer.svelte  WalletMultiButton.svelte  WalletProvider.svelte  raffleProgram.ts  raffleStatus.ts  router.ts  timeFormat.ts  walletStore.ts
frontend/src/lib/components/: ExplorerLink.svelte  TimeDisplay.svelte
frontend/src/lib/pages/: BuyTickets.svelte  CreateRaffle.svelte  Home.svelte  ManageRaffle.svelte  ViewRaffle.svelte
