[package]
name = "raffle"
version = "0.1.0"
description = "Simple raffle program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-vrf-sdk = { version = "0.2.0", features = ["anchor"] }

[lints]
workspace = true
